--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,13 +1,66 @@
+
+
 Body {
-    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    font-family: 'Arial', 'Helvetica', 'sans-serif';
+    margin: 0;
+    line-height: 1.8;
+    font-size: 15px;
+    color:#DFE8E6;
+}
+/*Header Section*/
+.header {
+    background-color: #001F3D ;
+}
+.navbar {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #001F3D;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    height: 30px;
+    
+}
+.logo-text {
+    color:#DAF0F3;
+}
+header > h1 {
+    color:#f1be32;
+    font-size: min(5vw, 1.2em);
+    padding-left: 30px;
+}
+.ul-div {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-inline-start: 0;
+    margin-block: 0;
+    height: 100%;
+    
+  }
+
+.nav-item {
+    color: white;
+    display: block;
+    margin: 0 0.2rem;
+    padding: 0.2rem;
+    text-align: -webkit-match-parent;
+}
+.navbar-nav {
+    list-style-type: disc;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
+.nav-link:hover {
+    color: #dfdfe2;
+    cursor: pointer;
+}
 main {
-    text-align: center;
-    color:aquamarine;
-}
-
-nav {
-    text-align: right;
-    inline-size: auto;
+    z-index: 0;
+    background-color:lightblue;
 }
