--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,65 +2,64 @@
 
 Body {
     position: relative;
-    font-family: 'Arial', 'Helvetica', 'sans-serif';
+    font-family: 'Gill Sans', 'Gill Sans MT', "Calibri", 'Trebuchet MS', sans-serif;
     margin: 0;
     line-height: 1.8;
     font-size: 15px;
     color:#DFE8E6;
 }
+
 /*Header Section*/
-.header {
-    background-color: #001F3D ;
-}
+
 .navbar {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: #001F3D;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    height: 30px;
-    
+    border-bottom: 1px solid rgba(247, 250, 250, 0.1);
+
 }
-.logo-text {
+
+.navbar .nav-link {
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
     color:#DAF0F3;
 }
-header > h1 {
-    color:#f1be32;
-    font-size: min(5vw, 1.2em);
-    padding-left: 30px;
-}
-.ul-div {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: center;
-    padding-inline-start: 0;
-    margin-block: 0;
-    height: 100%;
-    
-  }
 
-.nav-item {
-    color: white;
-    display: block;
-    margin: 0 0.2rem;
-    padding: 0.2rem;
-    text-align: -webkit-match-parent;
+.navbar-brand {
+    color:#DAF0F3;
 }
-.navbar-nav {
-    list-style-type: disc;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+
+.navbar-dark .navbar-nav .nav-link.active {
+    color: #E87A00;
+ }
+
+.logo-text {
+    font-size: 22px;
+    text-transform: uppercase;
+    color: #DAF0F3 !important;
 }
+
 
 .nav-link:hover {
-    color: #dfdfe2;
+    background-color:#DAF0F3;
+    border-radius: 15px;
+    color: #E87A00;
     cursor: pointer;
+    
 }
-main {
-    z-index: 0;
-    background-color:lightblue;
+
+/*Hero Section*/
+
+@media (min-width: 992px) {
+    .rounded-lg-3 { border-radius: .3rem; }
+  }
+  
+.hero_logo {
+    border-radius: 55%;
+    height: 72px;
+    width: 72px;
+}
+
+.home {
+    color: #dfdfe2;
+    background-color:#001F3D, #2E8BC0;
+    
 }
