Added Service Section

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,7 +12,8 @@ Body {
 /*Header Section*/
 
 .navbar {
-    border-bottom: 1px solid rgba(247, 250, 250, 0.1);
+    background:#001F3D;
+    
 
 }
 
@@ -58,8 +59,15 @@ Body {
     width: 72px;
 }
 
-.home {
-    color: #dfdfe2;
-    background-color:#001F3D, #2E8BC0;
-    
+.hero-section {
+    background: #001F3D;
+    background:linear-gradient(rgba(0, 31, 61, 1) 15%, rgba(46, 139, 192, 1) );
+}
+
+/*Services Section*/
+
+#services > div > h2 {
+    color:#001F3D;
+    text-align: center;
+    font-weight: 300;
 }
