--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,6 +9,25 @@ Body {
     color:#DFE8E6;
 }
 
+img {
+    width: 100%;
+ }
+
+.section-intro .hline {
+    width: 120px;
+    height: 2px;
+    background-color: rgba(0, 31, 61, 0.1);
+    margin: 16px auto 0 auto;
+}
+.section-intro {
+    text-align: center;
+    margin-bottom: 60px;
+}
+.section-break {
+    height:3px;
+    background-color: #001F3D;
+}
+
 /*Header Section*/
 
 .navbar {
@@ -64,10 +83,87 @@ Body {
     background:linear-gradient(rgba(0, 31, 61, 1) 15%, rgba(46, 139, 192, 1) );
 }
 
+/*About Section*/
+#about {
+    display: flex;
+}
+.about-description {
+    color:  #001F3D;
+    margin-top: 200px;
+    display: block;
+    align-items: center;
+}
+
+.filipiniana-img {
+    height: 70%;
+}
+
+.continue-btn {
+    background-color:  #001F3D;
+    border-radius: 10px;
+    width:100px;
+    padding: 5px 8px;
+    color: #DAF0F3;
+    text-align: center;
+    
+}
+
 /*Services Section*/
 
-#services > div > h2 {
+h2 {
     color:#001F3D;
     text-align: center;
     font-weight: 300;
+    padding-top:50px;
 }
+
+/* Portfolio */
+.portfolio-item {
+    overflow: hidden;
+    position: relative;
+ }
+
+.portfolio-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(14, 134, 212, 0.5);
+    display: flex;
+    align-items: flex-end;
+    padding: 30px;
+    opacity: 0;
+}
+
+.portfolio-item img, .portfolio-item .portfolio-overlay {
+    transition: all 0.4s ease;
+}
+.portfolio-overlay h3,
+.portfolio-overlay h6 {
+   color: #fff;
+}
+
+.portfolio-item:hover .portfolio-overlay {
+   opacity: 1;
+}
+
+.portfolio-item:hover img {
+   transform: scale(1.1);
+}
+
+.carousel-control-prev {
+    background-image: url("../Icons/prev.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+
+}
+.carousel-control-next {
+    background-image: url("../Icons/next.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+
+}
+
