--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,6 @@
-
+* {
+    box-sizing: border-box;
+}
 
 Body {
     position: relative;
@@ -24,8 +26,8 @@ img {
     margin-bottom: 60px;
 }
 .section-break {
-    height:3px;
-    background-color: #001F3D;
+    height:60px;
+    
 }
 
 /*Header Section*/
@@ -86,19 +88,25 @@ img {
 /*About Section*/
 #about {
     display: flex;
-}
-.about-description {
+    flex-wrap: wrap;
     color:  #001F3D;
-    margin-top: 200px;
     display: block;
     align-items: center;
+    padding-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    
 }
 
 .filipiniana-img {
-    height: 70%;
+    height: 20%;
+    width: 20%;
+    padding-bottom: 20px;
+    padding-top: 0.5px;
 }
 
-.continue-btn {
+
+/*.continue-btn {
     background-color:  #001F3D;
     border-radius: 10px;
     width:100px;
@@ -106,18 +114,35 @@ img {
     color: #DAF0F3;
     text-align: center;
     
-}
+}*/
 
 /*Services Section*/
 
-h2 {
-    color:#001F3D;
+#services {
+    background-color: rgba(0, 31, 61, 1);
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
+
+#services > h2 {
+    color:#DAF0F3;
     text-align: center;
     font-weight: 300;
     padding-top:50px;
 }
 
+#services > .section-intro .hline {
+    width: 120px;
+    height: 2px;
+    background-color: #DAF0F3;
+    margin: 16px auto 0 auto;
+}
+
 /* Portfolio */
+#portfolio {
+    color: rgba(0, 31, 61, 1);
+}
+
 .portfolio-item {
     overflow: hidden;
     position: relative;
@@ -167,3 +192,67 @@ h2 {
 
 }
 
+/*testimonials*/
+#testimonials {
+    text-align: center;
+    color: #DAF0F3;
+    background-color: rgba(0, 31, 61, 1);
+    padding-top: 50px;
+
+}
+
+#testimonials > .section-intro .hline {
+    width: 120px;
+    height: 2px;
+    background-color: #DAF0F3;
+    margin: 16px auto 0 auto;
+}
+
+.tes-img {
+    width: 300px;
+    height: 300px;
+    border-radius: 55%;
+}
+
+hr {
+    margin-left: 20px;
+    margin-right: 20px;
+    height: 5px;
+    background-color:#DAF0F3;
+}
+
+.tes-container {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.tes-description {
+    margin-top: 90px;
+}
+
+/*Contact Setion */
+
+#contact {
+    color: rgba(0, 31, 61, 1);
+}
+
+.socmed-icons {
+    height: 50px;
+    width: 50px;
+}
+
+.socmed-div {
+    padding-top: 50px;
+    
+}
+
+
+
+/*footer section*/
+
+footer {
+    background:rgba(0, 31, 61, 1);
+    height: 80px;
+    text-align: center;
+    padding-top: 25px;
+}
