--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,8 +1,10 @@
-
+* {
+    box-sizing: border-box;
+}
 
 Body {
     position: relative;
-    font-family: 'Gill Sans', 'Gill Sans MT', "Calibri", 'Trebuchet MS', sans-serif;
+    font-family: 'IBM Plex Sans', sans-serif;
     margin: 0;
     line-height: 1.8;
     font-size: 15px;
@@ -19,22 +21,32 @@ img {
     background-color: rgba(0, 31, 61, 0.1);
     margin: 16px auto 0 auto;
 }
+
 .section-intro {
     text-align: center;
-    margin-bottom: 60px;
+    margin-bottom: 10px;
 }
+
 .section-break {
-    height:3px;
-    background-color: #001F3D;
+    height:60px;
+    
 }
 
 /*Header Section*/
 
 .navbar {
-    background:#001F3D;
-    
-
+    background:#4120A9;
 }
+
+.header img {
+    float: left;
+    width: 30px;
+    height: 30px;
+    background-color: #F8CF40;
+    border-radius: 55%;
+    border-style: double;
+    border-color: #4120A9;
+  }
 
 .navbar .nav-link {
     font-size: 16px;
@@ -45,6 +57,7 @@ img {
 
 .navbar-brand {
     color:#DAF0F3;
+    
 }
 
 .navbar-dark .navbar-nav .nav-link.active {
@@ -73,32 +86,53 @@ img {
   }
   
 .hero_logo {
-    border-radius: 55%;
     height: 72px;
     width: 72px;
+    background-color: #F8CF40;
+    border-radius: 55%;
+    border-style: double;
+    border-color: #4120A9;
 }
 
 .hero-section {
-    background: #001F3D;
-    background:linear-gradient(rgba(0, 31, 61, 1) 15%, rgba(46, 139, 192, 1) );
+    background:#001F3D;
+    color: #001F3D;
+    background:linear-gradient(#4120A9 15%, #A16AE8, #F6D4D2, rgba(161, 169, 254, 1)
+    );
+}
+
+.knowmore-btn {
+    /*background:#4120A9;*/
+    text-decoration: none;
+    background-color:#4120A9;
+    border-radius:375rem;
+    padding: 10px 20px;
+    color: white;
+    font-size: 1rem;
+    
 }
 
 /*About Section*/
 #about {
     display: flex;
-}
-.about-description {
+    flex-wrap: wrap;
     color:  #001F3D;
-    margin-top: 200px;
     display: block;
     align-items: center;
+    padding-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    
 }
 
 .filipiniana-img {
-    height: 70%;
+    height: 20%;
+    width: 20%;
+    padding-bottom: 20px;
 }
 
-.continue-btn {
+
+/*.continue-btn {
     background-color:  #001F3D;
     border-radius: 10px;
     width:100px;
@@ -106,18 +140,61 @@ img {
     color: #DAF0F3;
     text-align: center;
     
-}
+}*/
 
 /*Services Section*/
 
-h2 {
-    color:#001F3D;
+#services {  
+    background:#001F3D;
+    background:linear-gradient(#4120A9, #A16AE8, #F6D4D2, rgba(161, 169, 254, 1));
+    padding-top: 50px;
+    color:#DAF0F3;
+    
+}
+
+#services > h2 {
     text-align: center;
     font-weight: 300;
     padding-top:50px;
 }
 
+#services > .section-intro .hline {
+    width: 120px;
+    height: 2px;
+    background-color: rgba(161, 169, 254, 1);
+    margin: 16px auto 0 auto;
+    
+}
+
+.carousel-control-prev-icon {
+    background-image: url("../Icons/prev.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    
+
+}
+.carousel-control-next-icon {
+    background-image: url("../Icons/next.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+
+}
+
+.carousel-img{
+    height: 50%;
+    width: 50%;
+}
+.carousel-caption {
+    color:#001F3D;
+}
+
 /* Portfolio */
+#portfolio {
+    color: rgba(0, 31, 61, 1);
+}
+
 .portfolio-item {
     overflow: hidden;
     position: relative;
@@ -139,6 +216,7 @@ h2 {
 .portfolio-item img, .portfolio-item .portfolio-overlay {
     transition: all 0.4s ease;
 }
+
 .portfolio-overlay h3,
 .portfolio-overlay h6 {
    color: #fff;
@@ -152,18 +230,83 @@ h2 {
    transform: scale(1.1);
 }
 
-.carousel-control-prev {
-    background-image: url("../Icons/prev.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+
+
+/*testimonials*/
+#testimonials {
+    text-align: center;
+    color: #DAF0F3;
+    background:#001F3D;
+    background:linear-gradient(#4120A9, #A16AE8, #F6D4D2, rgba(161, 169, 254, 1)
+    );
+    padding-top: 50px;
 
 }
-.carousel-control-next {
-    background-image: url("../Icons/next.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
+
+#testimonials > .section-intro .hline {
+    width: 120px;
+    height: 2px;
+    background-color: #DAF0F3;
+    margin: 16px auto 0 auto;
+}
+
+.tes-img {
+    width: 300px;
+    height: 300px;
+    border-radius: 55%;
+}
+
+hr {
+    margin-left: 20px;
+    margin-right: 20px;
+    height: 5px;
+    background-color:#DAF0F3;
+}
+
+.tes-container {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.tes-description {
+    margin-top: 90px;
+}
+
+/*Contact Section */
+
+#contact {
+    color: rgba(0, 31, 61, 1);
+    height:500px;
+}
+
+.socmed-icons {
+    height: 50px;
+    width: 50px;
+}
+
+.socmed-div {
+    padding-top: 50px;
+    justify-content: space-evenly;
+    
+}
+
+.contact-div {
+    padding-top: 150px;
+}
+
+
+/*footer section*/
+
+footer {
+    height: 80px;
+    background:linear-gradient(#4120A9, #A16AE8);
+    text-align: center;
+}
+
+.footer-div1  h6{
+    font-size: 14px;
+    padding-top: 30px;
 
 }
+
 
