Change bg color of body element

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,7 +9,7 @@ Body {
     line-height: 1.8;
     font-size: 15px;
     color:#DFE8E6;
-    background-color:rgba(161, 169, 254, 0.5);
+    background-color: #F6D4D2;
 }
 
 img {
