--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,12 +6,13 @@
 
 Body {
     position: relative;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: 'Acme', sans-serif;
     font-size: 15px;
     color:#DFE8E6;
     background-color: #F6D4D2;
+    line-height: 1.2;
+    margin:auto 0;
 }
-
 
 .section-intro .hline {
     width: 120px;
@@ -67,76 +68,127 @@ Body {
 
 /*Hero Section*/
 
-.hero_logo {
-    border-radius: 55%;
-    height: 72px;
-    width: 72px;
+.hero-logo {
+    border-radius: 30%;
+    padding-top: 20px;
+    background-color:#A16AE8;
+    box-shadow:0px 4px 17px 0px #001F3D
 }
 
-.home {
-    background:#001F3D;
+#home {
     color: #001F3D;
-    background:linear-gradient(#4120A9 15%, #A16AE8, #F6D4D2, #a1a9fe
-    );
+    background-image: url(../images/banner-1050614_1920.jpg); /* Image by <a href="https://pixabay.com/users/geralt-9301 */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 50rem;
+    column-gap: 16px;
+}
+.home-title {
+    font-size:3em;
+}
+
+span {
+    color:#A16AE8;
+}
+
+.text-container {
+    display:flex;
+    background-color:rgba(246, 212, 210, 0.364);
+    height: 150px;
+    width:auto;
+    border-radius: 16px;
+}
+
+.text-container h1 {
+    margin: auto 0;
 }
 
 .getStarted-btn {
     text-decoration: none;
+    text-align: center;
     background-color:#4120A9;
-    border-radius:375rem;
+    border-radius: 375rem;
     padding: 10px 20px;
     color: #DAF0F3;
     font-size: 1rem;
-    margin-left: auto;
-    margin-right: auto;
-
 }
+
+
 
 /*About Section*/
 #about {
     color:  #001F3D;
     align-items: center;
     padding-bottom: 50px;
+    padding-top: 70px;
+    font-size: 1em;
 }
 
 .about-container {
     padding-top: 20px;
+    max-width: 1400px;
+    min-width: 200px;
+    margin: 0 auto;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    max-width: 950px;
     gap: 30px;
 }
 
-.filipiniana-img {
-    height: 100%;
-    width: 100%;
-    border-radius:15px;
+.about-content-container {
+    position: relative;
+    width: 25em;
+    height: 26.5em;
+    border-radius: 10px;
+    background:rgba(161, 106, 232, 0.349);
+    box-shadow:0px 2px 5px 0px #001F3D;
+
+}
+.about-img-container {
+    position: relative;
+    height: 26.5em;
+    border-radius: 10px;
 }
 
-.about-description-container {
-    text-align: center;
-    margin-top: auto;
-    margin-bottom: auto;
+.about-contents {
+    padding: 20px;
+    text-align: left;
+}
+
+.filipiniana-img {
+    height: 26.5em;
+    width:100%;
+    border-radius:15px;
+    box-shadow:0px 2px 5px 0px #001F3D;
 }
 
 .about-description-title {
-    font-size: 0.5rem;
+    font-size: 1.2em;
+    padding-bottom: 10px;
 }
 
 .about-description {
-    font-size: 16px;
+    font-size: 1em;
 }
 
-
-.filipiniana-img:hover {
-    transform: scale(1.05);
-    box-shadow:0px 4px 17px 0px #001F3D;
-    opacity: 1;
+.socmed-icons {
+    height: 2.3em;
+    width: 2.3em;
+    opacity: 0.5;
 }
 
+.socmed-div {
+    justify-content: space-evenly;
+    padding-top: 20px;
+
+}
+
+.icon-link {
+    text-decoration: none;
+}
 
 
 /*skills Section*/
@@ -163,24 +215,6 @@ Body {
 }
 .carousel-caption {
     color:#001F3D;
-}
-.skills-caption-container {
-    width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.skills-img-container {
-    width: 500px;
-    height:300px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.carousel-img{
-    height: 100%;
-    width: 80%;
-    overflow: hidden;
 }
 
 .carousel-control-prev-icon {
@@ -217,20 +251,18 @@ Body {
     display: flex;
     flex-direction:row;
     flex-wrap: wrap;
-    margin-right: 4px;
-    margin-left: 4px;
+    justify-content: center;
+    align-items: center;
 }
 
 .portfolio-item {
     overflow: hidden;
     position: relative;
-    border-radius: 6px;
-    padding: 8px 10px;
  }
 
  .portfolio-img {
     width:100%;
-    height: 100%;
+    height: 350px;
  }
 
 .portfolio-overlay {
@@ -263,38 +295,73 @@ Body {
    transform: scale(1.05);
 }
 
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+  }
+
+
 /*Contact Section */
 
 .contact {
     color: rgba(0, 31, 61, 1);
-    height:500px;
-    background:linear-gradient(#4120A9, #A16AE8, #F6D4D2, #a1a9fe);
-}
-
-.socmed-icons {
-    height: 50px;
-    width: 50px;
-}
-
-.socmed-div {
-    padding-top: 50px;
-    justify-content: space-evenly;
+    height: 680px;
 }
 
 .contact-div {
-    padding-top: 150px;
-}
-.icon-link {
-    text-decoration: none;
+    padding-top: 100px;
+    padding-bottom: 50px;
 }
 
+label {
+    display: flex;
+}
+
+.email, .message {
+    background: rgba(246, 212, 210, 0.416);
+    border: 2px solid rgba(64, 32, 169, 0.833);
+    color: #4120A9;
+}
+
+form {
+    margin:0 auto;
+    max-width: 700px;
+    padding: 2em 0;
+    font-size: 24px;
+}
+
+form input {
+    width: 24.4em;
+    height: 30px;
+    border-radius: 5px;
+}
+
+form textarea {
+    border-radius: 5px;
+    height: 180px;
+}
+
+button {
+    width: 10em;
+    height: 50%;
+    font-size: 24px;
+    border-radius: 8px;
+    background: rgba(161, 169, 254, 0.404);
+    border: 2px solid rgba(64, 32, 169, 0.833);
+}
+
+.space {
+    height: 20px;
+}
 
 /*footer section*/
 
 footer {
     background:linear-gradient(#4120A9, #A16AE8);
-    padding-bottom: 50px;
-    height: 100px;
+    height: 50px;
     text-align: center;
     padding-top: 20px;
     font-size: 16px;
@@ -303,78 +370,4 @@ footer {
 footer a {
     text-decoration: none;
     color:#DFE8E6;
-
-}
-
-@media screen and (max-width:950px){
-    .about-container {
-        margin: 0 20px;
-    }
-}
-
-@media screen and (max-width:650px) {
-    .about-description-container {
-        padding-top: 10px;
-
-    }
-
-    .section-intro .hline {
-        width: 90px;
-
-    }
-
-    #about {
-        margin: 0 auto;
-    }
-
-    .about-container {
-        display:block;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-    }
-   
-    .about-description-container {
-        padding-top: 10px;
-        margin: 0 20px;
-    }
-
-    .filipiniana-img {
-        display: block;
-        margin: 0 auto;
-        height: 33.33%;
-        width: 50%;
-    }
-
-    #skills > .section-intro .hline {
-        width: 90px;
-    }
-
-    .skills-img-container {
-        width: 200px;
-        height: 100px;
-    }
-    .skills-caption-container{
-        width: 180px;
-        height: 300px;
-    }
-}
-
-@media screen and (max-width:280px) {
-    .section-intro .hline {
-        width: 90px;
-
-    }
-    #skills > .section-intro .hline {
-        width: 90px;
-    }
-
-    .skills-img-container {
-        width: 50%;
-        height: 100px;
-        margin: 0 auto;
-    }
-    .skills-caption-container{
-        display: none;
-    }
 }
