--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -11,7 +11,6 @@ Body {
     color:#DFE8E6;
     background-color: #F6D4D2;
     line-height: 1.2;
-    margin:auto 0;
 }
 
 .section-intro .hline {
@@ -344,7 +343,7 @@ form textarea {
     height: 180px;
 }
 
-button {
+button[type="submit"] {
     width: 10em;
     height: 50%;
     font-size: 24px;
