--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,10 +5,10 @@
 }
 
 Body {
-    font-family: 'Acme', sans-serif;
+    font-family: "Acme", sans-serif;
     font-size: 15px;
-    color: #001F3D;
-    background-color: #F6D4D2;
+    color: #89abe3ff;
+    background-color: #fcf6f5ff;
     line-height: 1.1;
 }
 
@@ -24,41 +24,29 @@ Body {
     margin-bottom: 10px;
 }
 
-
 /*
 Header Section
 */
 
 .navbar {
-    background:rgb(65, 32, 169);
+    background: #89abe3ff;
+    color: #fcf6f5ff;
 }
 
 .navbar .nav-link {
     font-size: 16px;
     text-transform: uppercase;
     letter-spacing: 1px;
-    color:#DAF0F3;
-}
-
-.navbar-brand {
-    color:#DAF0F3;
+    color: #fcf6f5ff;
 }
 
 .navbar-dark .navbar-nav .nav-link.active {
-    color: #E87A00;
- }
-
-.logo-text {
-    font-size: 22px;
-    text-transform: uppercase;
-    color: #DAF0F3 !important;
+    color: #e87a00;
 }
 
-
 .nav-link:hover {
-    background-color:#DAF0F3;
-    border-radius: 10px;
-    color: #E87A00;
+    background-color: #fcf6f5ff;
+    color: #e87a00;
     cursor: pointer;
 }
 
@@ -67,30 +55,31 @@ Hero Section
 */
 
 #home {
-    background: url(../images/banner-1050614_1920.jpg) rgba(246, 212, 210, 0.5); /* Image by <a href="https://pixabay.com/users/geralt-9301 */
+    background: url(../images/banner-1050614_1920.jpg) rgba(246, 212, 210, 0.6);
+    /* Image by <a href="https://pixabay.com/users/geralt-9301 */
     background-blend-mode: overlay;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 50rem;
+    height: 40rem;
+    color: #001e3d;
 }
 
 .hero-logo {
     border-radius: 30%;
     padding-top: 20px;
-    background-color:#A16AE8;
-    box-shadow:0px 4px 17px 0px #001F3D
+    background-color: #a16ae8;
+    box-shadow: 0px 4px 17px 0px #001f3d;
 }
 
 .home-title {
-    font-size:3em;
+    font-size: 3em;
 }
 
 span {
-    color:#A16AE8;
-    text-shadow: 2px 2px 0.5px #001F3D;
+    color: #89abe3ff;
+    text-shadow: 2px 2px 0.5px #001f3d;
 }
-
 
 .text-container h1 {
     margin: auto 0;
@@ -99,66 +88,81 @@ span {
 .getStarted-btn {
     text-decoration: none;
     text-align: center;
-    background-color:#4120A9;
+    background-color: #89abe3ff;
     border-radius: 375rem;
     padding: 10px 20px;
-    color: #DAF0F3;
+    color: #fcf6f5ff;
     font-size: 1rem;
 }
-
 
 /*
 About Section
 */
+
 #about {
     align-items: center;
-    margin: 140px auto;
+    justify-content: center;
+    margin: 130px auto;
+    padding-top: 70px;
     font-size: 1em;
 }
 
 .about-container {
-    padding-top: 20px;
-    max-width: 1400px;
-    min-width: 200px;
-    margin: 0 auto;
+    margin: 20px 10%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
+    justify-content: space-between;
+}
+
+@media only screen and (max-width: 1300px) {
+    .about-container {
+        display: block;
+    }
+
+    .about-content-container {
+        padding-top: 20px;
+    }
 }
 
 .about-content-container {
-    width: 25em;
-    height: 26.5em;
-}
-
-.about-img-container {
-    position: relative;
-    height: 26.5em;
-    border-radius: 10px;
-}
-
-.about-contents {
-    padding: 20px;
+    flex-basis: 55%;
     text-align: left;
 }
 
+.about-img-container {
+    flex-basis: 40%;
+    justify-content: center;
+}
+
 .filipiniana-img {
-    height: 26.5em;
-    width:100%;
-    border-radius:15px;
-    box-shadow:0px 2px 5px 0px #001F3D;
+    height: 80%;
+    width: 100%;
+    border-radius: 15px;
+    box-shadow: 0px 2px 5px 0px #001f3d;
+}
+
+.flex-items-1 {
+    flex-basis: 30%;
+}
+
+.flex-items-2 {
+    flex-basis: 30%;
+}
+
+.flex-items-3 {
+    flex-basis: 30%;
 }
 
 .about-description-title {
-    font-size: 1.2em;
+    font-size: 2em;
     padding-bottom: 10px;
 }
 
 .about-description {
-    font-size: 1.2em;
+    font-size: 1.8em;
+    padding-top: 30px;
+    text-align: justify;
 }
 
 .socmed-icons {
@@ -172,18 +176,61 @@ About Section
     padding-top: 20px;
 }
 
-.icon-link {
+.icon-link,
+a {
     text-decoration: none;
 }
 
+/* About Page */
 
-/* 
-Portfolio 
+.about-page-header {
+    background: #89abe3ff;
+    color: #fcf6f5ff;
+    height: 50px;
+}
+
+.about-page-header-title {
+    display: flex;
+    padding-top: 10px;
+    justify-content: center;
+}
+
+.about-header-text {
+    font-size: 1.5em;
+    text-decoration: none;
+}
+
+.img-one {
+    rotate: 18deg;
+}
+
+.img-two {
+    position: relative;
+    rotate: 10deg;
+}
+
+.img-three {
+    display: block;
+}
+
+.img-four {
+    rotate: -5deg;
+}
+
+.page-img {
+    width: 100%;
+    height: 35vh;
+    border-radius: 15px;
+    box-shadow: 0px 4px 17px 0px #001f3d;
+}
+
+/*
+Portfolio
 */
 
 .portfolio-container {
     display: flex;
-    flex-direction:row;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
@@ -192,12 +239,12 @@ Portfolio
 .portfolio-item {
     overflow: hidden;
     position: relative;
- }
+}
 
- .portfolio-img {
-    width:100%;
-    height: 300px;
- }
+.portfolio-img {
+    width: 100%;
+    height: 350px;
+}
 
 .portfolio-overlay {
     position: absolute;
@@ -205,37 +252,32 @@ Portfolio
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(161, 169, 254, 0.8);
+    background-color: rgba(137, 172, 227, 0.7);
     display: flex;
     align-items: flex-end;
     padding: 30px;
     opacity: 0;
 }
 
-.portfolio-img, .portfolio-item .portfolio-overlay {
+.portfolio-img,
+.portfolio-item .portfolio-overlay {
     transition: all 0.4s ease;
 }
 
-
 .portfolio-item:hover .portfolio-overlay {
-   opacity: 1;
+    opacity: 1;
 }
 
 .portfolio-item:hover img {
-   transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .material-symbols-outlined {
-    font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
-    'GRAD' 0,
-    'opsz' 48
-  }
-
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+}
 
 /*
-Contact Section 
+Contact Section
 */
 
 .contact {
@@ -244,19 +286,18 @@ Contact Section
     padding-bottom: 50px;
 }
 
-
 label {
     display: flex;
 }
 
-.email, .message {
-    background: rgba(246, 212, 210, 0.416);
-    border: 2px solid rgba(64, 32, 169, 0.833);
-    color: #4120A9;
+.email,
+.message {
+    background: #fcf6f5ff;
+    border: 2px solid #89abe3ff;
 }
 
 form {
-    margin:0 auto;
+    margin: 0 auto;
     max-width: 700px;
     padding: 2em 0;
     font-size: 24px;
@@ -278,12 +319,12 @@ button[type="submit"] {
     height: 50%;
     font-size: 24px;
     border-radius: 8px;
-    background: rgba(161, 169, 254, 0.404);
-    border: 2px solid rgba(64, 32, 169, 0.833);
+    background: rgba(137, 172, 227, 0.534);
+    border: 2px solid #89abe3ff;
 }
 
 .space {
-    height: 20px;
+    height: 50px;
 }
 
 /*
@@ -291,10 +332,8 @@ footer section
 */
 
 footer {
-    background:rgb(65, 32, 169);
     height: 50px;
     text-align: center;
     padding-top: 20px;
     font-size: 16px;
-    color:#DFE8E6;
 }
