--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,13 +4,18 @@
     padding: 0;
 }
 
+html, body {
+    max-width: 100% !important; 
+    overflow-x: hidden;
+}
+
+
 Body {
     font-family: "Acme", sans-serif;
     font-size: 15px;
     color: #89abe3ff;
     background-color: #fcf6f5ff;
     line-height: 1.1;
-    margin: auto;
 }
 
 .section-intro .hline {
@@ -22,7 +27,7 @@ Body {
 
 .section-intro {
     text-align: center;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 /*
@@ -112,7 +117,6 @@ About Section
     margin: 20px 10%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -127,7 +131,7 @@ About Section
 }
 
 .about-content-container {
-    flex-basis: 55%;
+    flex-basis: 50%;
     text-align: left;
 }
 
@@ -180,14 +184,13 @@ About Section
 .icon-link,
 a {
     text-decoration: none;
-    color: #001f3d;
 }
 
 /* About Page */
 
 .about-page-header {
     background: #89abe3ff;
-    color: #fcf6f5ff;
+    color: #fcf6f5ff !important;
     height: 50px;
 }
 
@@ -252,7 +255,7 @@ Portfolio
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: auto;
     height: 100%;
     background-color: rgba(137, 172, 227, 0.7);
     display: flex;
@@ -327,6 +330,7 @@ button[type="submit"] {
 
 .space {
     height: 50px;
+    width: auto;
 }
 
 /*
