--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -255,7 +255,7 @@ Portfolio
     position: absolute;
     top: 0;
     left: 0;
-    width: auto;
+    width: 100%;
     height: 100%;
     background-color: rgba(137, 172, 227, 0.7);
     display: flex;
