--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,12 @@
     padding: 0;
 }
 
+html, body {
+    max-width: 100% !important; 
+    overflow-x: hidden;
+}
+
+
 Body {
     font-family: "Acme", sans-serif;
     font-size: 15px;
@@ -21,7 +27,7 @@ Body {
 
 .section-intro {
     text-align: center;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 /*
@@ -63,6 +69,7 @@ Hero Section
     background-position: center;
     height: 40rem;
     color: #001e3d;
+    overflow-x: hidden;
 }
 
 .hero-logo {
@@ -105,13 +112,13 @@ About Section
     margin: 130px auto;
     padding-top: 70px;
     font-size: 1em;
+    overflow-x: hidden;
 }
 
 .about-container {
     margin: 20px 10%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -123,10 +130,14 @@ About Section
     .about-content-container {
         padding-top: 20px;
     }
+
+    /* .portfolio-container {
+        margin: auto 20px;
+    } */
 }
 
 .about-content-container {
-    flex-basis: 55%;
+    flex-basis: 50%;
     text-align: left;
 }
 
@@ -185,8 +196,9 @@ a {
 
 .about-page-header {
     background: #89abe3ff;
-    color: #fcf6f5ff;
+    color: #fcf6f5ff !important;
     height: 50px;
+    overflow-x: hidden;
 }
 
 .about-page-header-title {
@@ -201,7 +213,7 @@ a {
 }
 
 .img-one {
-    rotate: 18deg;
+    
 }
 
 .img-two {
@@ -234,6 +246,9 @@ Portfolio
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
+    gap: 20px;
+    /* overflow-x: hidden; */
 }
 
 .portfolio-item {
@@ -242,8 +257,9 @@ Portfolio
 }
 
 .portfolio-img {
-    width: 100%;
-    height: 350px;
+    width: 400px;
+    height: 300px;
+    object-fit: cover;
 }
 
 .portfolio-overlay {
@@ -257,6 +273,8 @@ Portfolio
     align-items: flex-end;
     padding: 30px;
     opacity: 0;
+    color: #fcf6f5ff;
+    text-shadow: 1px 2px 0.5px #001f3d;
 }
 
 .portfolio-img,
@@ -284,6 +302,7 @@ Contact Section
     height: 700px;
     padding-top: 100px;
     padding-bottom: 50px;
+    overflow-x: hidden;
 }
 
 label {
@@ -321,10 +340,13 @@ button[type="submit"] {
     border-radius: 8px;
     background: rgba(137, 172, 227, 0.534);
     border: 2px solid #89abe3ff;
+    color: #fcf6f5ff;
+    text-shadow: 1px 2px 0.5px #001f3d;
 }
 
 .space {
     height: 50px;
+    width: auto;
 }
 
 /*
