--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 
-html, body {
+html{
     max-width: 100% !important; 
     overflow-x: hidden;
 }
@@ -16,6 +16,8 @@ Body {
     color: #89abe3ff;
     background-color: #fcf6f5ff;
     line-height: 1.1;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 .section-intro .hline {
@@ -122,7 +124,7 @@ About Section
     justify-content: space-between;
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 980px) {
     .about-container {
         display: block;
     }
@@ -131,9 +133,9 @@ About Section
         padding-top: 20px;
     }
 
-    /* .portfolio-container {
+    .portfolio-container {
         margin: auto 20px;
-    } */
+    }
 }
 
 .about-content-container {
@@ -213,7 +215,7 @@ a {
 }
 
 .img-one {
-    
+    rotate: -5deg;
 }
 
 .img-two {
@@ -228,6 +230,7 @@ a {
 .img-four {
     rotate: -5deg;
 }
+
 
 .page-img {
     width: 100%;
@@ -247,7 +250,7 @@ Portfolio
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    gap: 20px;
+    row-gap: 20px;
     /* overflow-x: hidden; */
 }
 
@@ -257,9 +260,10 @@ Portfolio
 }
 
 .portfolio-img {
-    width: 400px;
-    height: 300px;
+    width: 100%;
+    height: 30vh;
     object-fit: cover;
+    padding: 0 10px;
 }
 
 .portfolio-overlay {
